@@ -1,3 +1,8 @@
+2008-03-21  David Engster  <dengste@eml.cc>
+
+	* sb-heise.el (shimbun-heise-get-newsticker-headers): Adapt to the new
+	URL scheme on http://www.heise.de/newsticker.
+
 2008-02-24  David Hansen  <david.hansen@gmx.net>
 
 	* sb-heise.el (shimbun-heise-wash-telepolis-article): relax ad
